crash in SymbolTable::do_lookup

XMLWordPrintable

    • b10

        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # SIGSEGV (0xb) at pc=0x00007f1b8a7b34a8, pid=19661, tid=20126
        #
        # JRE version: Java(TM) SE Runtime Environment GraalVM 22.0.0-dev (17.0.2+4) (build 17.0.2+4-LTS-jvmci-22.0-b01)
        # Java VM: Java HotSpot(TM) 64-Bit Server VM GraalVM 22.0.0-dev (17.0.2+4-LTS-jvmci-22.0-b01, mixed mode, tiered, jvmci, compressed oops, compressed class ptrs, parallel gc, linux-amd64)
        # Problematic frame:
        # V [libjvm.so+0xd424a8] SymbolTable::do_lookup(char const*, int, unsigned long)+0xd8
        #
        # No core dump will be written. Core dumps have been disabled. To enable core dumping, try "ulimit -c unlimited" before starting Java again
        #
        # If you would like to submit a bug report, please visit:
        # https://bugreport.java.com/bugreport/crash.jsp
        #

        Current thread (0x00007f1b84c9e210): JavaThread "ForkJoinPool-1-worker-1" daemon [_thread_in_vm, id=20126, stack(0x00007f1af55ff000,0x00007f1af6000000)]

        Stack: [0x00007f1af55ff000,0x00007f1af6000000], sp=0x00007f1af5ffc930, free space=10230k
        Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
        V [libjvm.so+0xd424a8] SymbolTable::do_lookup(char const*, int, unsigned long)+0xd8
        V [libjvm.so+0xd4266e] SymbolTable::lookup_only(char const*, int, unsigned int&)+0x9e
        V [libjvm.so+0x551193] ClassFileParser::parse_constant_pool_entries(ClassFileStream const*, ConstantPool*, int, JavaThread*)+0x763
        V [libjvm.so+0x551b55] ClassFileParser::parse_stream(ClassFileStream const*, JavaThread*) [clone .part.0]+0x175
        V [libjvm.so+0x552eae] ClassFileParser::ClassFileParser(ClassFileStream*, Symbol*, ClassLoaderData*, ClassLoadInfo const*, ClassFileParser::Publicity, JavaThread*)+0x24e
        V [libjvm.so+0xa34d40] KlassFactory::create_from_stream(ClassFileStream*, Symbol*, ClassLoaderData*, ClassLoadInfo const&, JavaThread*)+0x290
        V [libjvm.so+0xd52670] SystemDictionary::resolve_class_from_stream(ClassFileStream*, Symbol*, Handle, ClassLoadInfo const&, JavaThread*)+0x150
        V [libjvm.so+0x8cebee] jvm_define_class_common(char const*, _jobject*, signed char const*, int, _jobject*, char const*, JavaThread*)+0x22e
        V [libjvm.so+0x8ceef4] JVM_DefineClassWithSource+0xa4
        C [libjava.so+0xde62] Java_java_lang_ClassLoader_defineClass1+0x182
        J 1173 java.lang.ClassLoader.defineClass1(Ljava/lang/ClassLoader;Ljava/lang/String;[BIILjava/security/ProtectionDomain;Ljava/lang/String;)Ljava/lang/Class; java.base@17.0.2 (0 bytes) @ 0x00007f1b734e8f4d [0x00007f1b734e8e20+0x000000000000012d]
        J 1181 c1 java.lang.ClassLoader.defineClass(Ljava/lang/String;[BIILjava/security/ProtectionDomain;)Ljava/lang/Class; java.base@17.0.2 (43 bytes) @ 0x00007f1b6c2ace54 [0x00007f1b6c2acb00+0x0000000000000354]
        J 1178 c1 java.security.SecureClassLoader.defineClass(Ljava/lang/String;[BIILjava/security/CodeSource;)Ljava/lang/Class; java.base@17.0.2 (16 bytes) @ 0x00007f1b6c2abc0c [0x00007f1b6c2abb40+0x00000000000000cc]
        J 2317 c1 jdk.internal.loader.BuiltinClassLoader.defineClass(Ljava/lang/String;Ljdk/internal/loader/Resource;)Ljava/lang/Class; java.base@17.0.2 (121 bytes) @ 0x00007f1b6c4a627c [0x00007f1b6c4a53a0+0x0000000000000edc]
        J 1018 c1 jdk.internal.loader.BuiltinClassLoader.findClassOnClassPathOrNull(Ljava/lang/String;)Ljava/lang/Class; java.base@17.0.2 (64 bytes) @ 0x00007f1b6c25f84c [0x00007f1b6c25e860+0x0000000000000fec]
        J 2517 c2 jdk.internal.loader.BuiltinClassLoader.loadClassOrNull(Ljava/lang/String;Z)Ljava/lang/Class; java.base@17.0.2 (143 bytes) @ 0x00007f1b735dd160 [0x00007f1b735dca60+0x0000000000000700]
        J 845 c1 jdk.internal.loader.ClassLoaders$AppClassLoader.loadClass(Ljava/lang/String;Z)Ljava/lang/Class; java.base@17.0.2 (40 bytes) @ 0x00007f1b6c20647c [0x00007f1b6c205e60+0x000000000000061c]
        J 2366 c1 java.lang.ClassLoader.loadClass(Ljava/lang/String;Z)Ljava/lang/Class; java.base@17.0.2 (121 bytes) @ 0x00007f1b6c4bddac [0x00007f1b6c4bda40+0x000000000000036c]
        J 2602 c2 java.lang.ClassLoader.loadClass(Ljava/lang/String;)Ljava/lang/Class; java.base@17.0.2 (7 bytes) @ 0x00007f1b735b0760 [0x00007f1b735b0720+0x0000000000000040]

          1. hs_err_pid19661.log
            129 kB
            Douglas Simon
          2. hs_err_pid52011.log
            179 kB
            Douglas Simon
          3. hs_err_pid12967.log
            164 kB
            Douglas Simon
          4. jdk-20-ConcurrentHashTable.patch
            4 kB
            Tom Rodriguez

              Assignee:
              Coleen Phillimore
              Reporter:
              Douglas Simon
              Votes:
              0 Vote for this issue
              Watchers:
              13 Start watching this issue

                Created:
                Updated:
                Resolved: