8278965: crash in SymbolTable::do_lookup

Reviewed-by: fparain
Backport-of: 582b943439488a0f43482b67c0bc0d4975bf4023